[tool.poetry]
name = "orca"
version = "0.1.0"
description = "Helix 3.0 Support functions "
authors = ["Krishna Reddy <krishna.gopala@bcbsnc.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
chispa = "^0.6.0"
pytest-cov = "^2.10.1"
pytest-html = "^2.1.1"
sphinx = "^3.2.1"
pytest-xdist = {extras = ["psutil"], version = "^2.1.0"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
