[tool.poetry]
name = "orca"
version = "0.1.0"
description = "Pyspark Support functions "
authors = ["Krishna Reddy <gopalkrishna.naredla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
chispa = "^0.6.0"
pytest-cov = "^2.10.1"
pytest-html = "^2.1.1"
sphinx = "^3.2.1"
pytest-xdist = {extras = ["psutil"], version = "^2.1.0"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
